# chat_room

./: .gitignore  README.md
client_code/chat_client/: CMakeLists.txt  addfrineddialog.cpp  addfrineddialog.h  debug.h  groupchoosefrienddialog.cpp  groupchoosefrienddialog.h  groupsessiondetailwidget.cpp  groupsessiondetailwidget.h  historymessagedialog.cpp  historymessagedialog.h  main.cpp  mainwidget.cpp  mainwidget.h  middlewindowarea.cpp  middlewindowarea.h  phoneloginwidget.cpp  phoneloginwidget.h  resource.qrc  rightwindowmessageeditarea.cpp  rightwindowmessageeditarea.h  rightwindowmessageshowarea.cpp  rightwindowmessageshowarea.h  selfinfowidget.cpp  selfinfowidget.h  sessiondetailwidget.cpp  sessiondetailwidget.h  soundrecorder.cpp  soundrecorder.h  toast.cpp  toast.h  userinfowidget.cpp  userinfowidget.h  usernameloginwidget.cpp  usernameloginwidget.h  verifycodewidget.cpp  verifycodewidget.h
client_code/chat_client/model/: data.h  datacenter.cpp  datacenter.h
client_code/chat_client/network/: netclient.cpp  netclient.h
client_code/chat_client/proto/: base.proto  file.proto  friend.proto  gateway.proto  message_storage.proto  message_transmit.proto  notify.proto  speech_recognition.proto  user.proto  voice_recognition.proto
client_code/chat_server_moke/: CMakeLists.txt  httpserver.cpp  httpserver.h  main.cpp  resource.qrc  util.h  websocketserver.cpp  websocketserver.h  widget.cpp  widget.h  widget.ui
client_code/chat_server_moke/resource/file/: test.txt
server_code/chat_server/: CMakeLists.txt
server_code/chat_server/common/: channel.hpp  dataES.hpp  dataRedis.hpp  elasticSearch.hpp  etcd.hpp  logger.hpp  mysql.hpp  mysqlChatSession.hpp  mysqlChatSessionMember.hpp  mysqlFriendApply.hpp  mysqlMessage.hpp  mysqlRelation.hpp  mysqlUser.hpp  rabbitMQ.hpp  util.hpp  verifyCode.hpp  voice.hpp
server_code/chat_server/file/: CMakeLists.txt
server_code/chat_server/file/source/: fileServer.cc  fileServer.hpp
server_code/chat_server/file/test/: fileClient.cc
server_code/chat_server/friend/: CMakeLists.txt
server_code/chat_server/friend/source/: friendServer.cc  friendServer.hpp
server_code/chat_server/friend/test/: friendClient.cc
server_code/chat_server/gateway/: CMakeLists.txt
server_code/chat_server/gateway/source/: connection.hpp  gatewayServer.cc  gatewayServer.hpp
server_code/chat_server/message/: CMakeLists.txt
server_code/chat_server/message/source/: messageServer.cc  messageServer.hpp
server_code/chat_server/message/test/: messageClient.cc
server_code/chat_server/odb/: chatSession.hxx  chatSessionMember.hxx  friendApply.hxx  message.hxx  relation.hxx  user.hxx
server_code/chat_server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message_storage.proto  message_transmit.proto  notify.proto  user.proto  voice_recognition.proto
server_code/chat_server/transmit/: CMakeLists.txt
server_code/chat_server/transmit/source/: transmitServer.cc  transmitServer.hpp
server_code/chat_server/transmit/test/: transmitClient.cc  userClient.cc
server_code/chat_server/user/: CMakeLists.txt
server_code/chat_server/user/source/: userServer.cc  userServer.hpp
server_code/chat_server/user/test/: userClient.cc
server_code/chat_server/voice/: CMakeLists.txt
server_code/chat_server/voice/source/: voiceServer.cc  voiceServer.hpp
server_code/chat_server/voice/test/: voiceClient.cc
server_code/test/etcd/: Makefile  get.cc  put.cc
server_code/test/logger/: Makefile  logger.hpp  main.cc
server_code/test_code/build2/build2-toolchain-0.17/bdep-0.17.0/bdep/: bdep
server_code/test_code/build2/build2-toolchain-0.17/build2-0.17.0/build2/: b
server_code/test_code/build2/build2-toolchain-0.17/build2-0.17.0/libbuild2/config/: host-config.cxx
server_code/test_code/build2/odb-build/libodb-gcc-N/libmysqlclient-8.0.15+16/mysql/: libmysqlclient.pc  libmysqlclient.shared.pc  libmysqlclient.static.pc
server_code/test_code/build2/odb-build/libodb-gcc-N/libodb-2.5.0-b.27/odb/: libodb.pc  libodb.shared.pc  libodb.static.pc
server_code/test_code/build2/odb-build/libodb-gcc-N/libodb-2.5.0-b.27/tests/basics/: driver
server_code/test_code/build2/odb-build/libodb-gcc-N/libodb-boost-2.5.0-b.27/odb/boost/: libodb-boost.pc  libodb-boost.shared.pc  libodb-boost.static.pc  version.hxx
server_code/test_code/build2/odb-build/libodb-gcc-N/libodb-boost-2.5.0-b.27/tests/basics/: driver
server_code/test_code/build2/odb-build/libodb-gcc-N/libodb-mysql-2.5.0-b.27/odb/mysql/: libodb-mysql.pc  libodb-mysql.shared.pc  libodb-mysql.static.pc  version.hxx
server_code/test_code/build2/odb-build/libodb-gcc-N/libodb-mysql-2.5.0-b.27/tests/basics/: driver
server_code/test_code/build2/odb-build/libodb-gcc-N/libz-1.2.1200+5/libz/: libz.pc  libz.shared.pc  libz.so.1.2.12  libz.static.pc
server_code/test_code/build2/odb-build/odb-gcc-N/libstudxml-1.1.0-b.10+2/libstudxml/: libstudxml.shared.pc
server_code/test_code/build2/odb-build/odb-gcc-N/odb-2.5.0-b.27/doc/pregenerated/: odb-manual.ps
server_code/test_code/build2/odb-build/odb-gcc-N/odb-2.5.0-b.27/odb/: odb  odb.pc  odb.shared.pc  version.hxx
server_code/test_code/test/etcd/: Makefile  get.cc  put.cc
server_code/test_code/test/logger/: Makefile  logger.hpp
